Closed
Bug 723772
Opened 14 years ago
Closed 14 years ago
regression: Panning in XUL fennec does not start until finger is removed from screen.
Categories
(Firefox for Android Graveyard :: Panning/Zooming, defect)
Tracking
(firefox11 fixed, firefox12 fixed, firefox13 fixed)
RESOLVED
FIXED
Firefox 13
People
(Reporter: mbrubeck, Assigned: mbrubeck)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
841 bytes,
patch
|
wesj
:
review+
akeybl
:
approval-mozilla-aurora+
akeybl
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
Note: This is in a build of mozilla-central tip plus the patch from bug 723480. (Without that patch, panning doesn't work at all.)
Steps to reproduce:
1) Drag to scroll any part of chrome or content in XUL Fennec.
Expected results: Scrolling happens as you move your finger.
Actual results: Nothing happens while you drag. Scrolling happens after you lift your finger.
It looks like mouse events aren't sent until a touch is finished. Possibly a regression from bug 721484.
| Assignee | ||
Comment 1•14 years ago
|
||
This fixes the bug for me. Next I'll test to make sure it doesn't regress anything in native Fennec.
Attachment #594033 -
Flags: review?(wjohnston)
| Assignee | ||
Updated•14 years ago
|
Status: NEW → ASSIGNED
status-firefox12:
--- → affected
Whiteboard: [has patch]
Version: Trunk → Firefox 12
Comment 2•14 years ago
|
||
Comment on attachment 594033 [details] [diff] [review]
patch
Review of attachment 594033 [details] [diff] [review]:
-----------------------------------------------------------------
r+ with a little change. Thanks for finding this matt!
::: widget/android/nsWindow.cpp
@@ -1586,3 @@
> }
> return false;
> }
We can just remove this return and instead return preventPanning at the end.
Attachment #594033 -
Flags: review?(wjohnston) → review+
| Assignee | ||
Comment 3•14 years ago
|
||
Pushed with review comment addressed:
https://hg.mozilla.org/integration/mozilla-inbound/rev/9d1a7abd2991
QA note: It won't be possible to verify this fix until bug 723480 is fixed.
| Assignee | ||
Comment 4•14 years ago
|
||
Comment on attachment 594033 [details] [diff] [review]
patch
[Approval Request Comment]
Regression caused by (bug #): bug 721484
User impact if declined: Panning is badly broken in XUL fennec.
Testing completed (on m-c, etc.): Landed on inbound 2/2.
Risk to taking this patch (and alternatives if risky): This is a low-risk Android-only trivial fix for some broken code.
String changes made by this patch: None.
Attachment #594033 -
Flags: approval-mozilla-beta?
Attachment #594033 -
Flags: approval-mozilla-aurora?
Comment 5•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Comment 6•14 years ago
|
||
Comment on attachment 594033 [details] [diff] [review]
patch
[Triage Comment]
Approved for Aurora 12 and Beta 11.
Attachment #594033 -
Flags: approval-mozilla-beta?
Attachment #594033 -
Flags: approval-mozilla-beta+
Attachment #594033 -
Flags: approval-mozilla-aurora?
Attachment #594033 -
Flags: approval-mozilla-aurora+
Comment 7•14 years ago
|
||
status-firefox11:
--- → affected
Comment 8•14 years ago
|
||
Updated•12 years ago
|
tracking-fennec: ? → ---
You need to log in
before you can comment on or make changes to this bug.
Description
•