Bug 723772 - Mousemove events broken in XUL fennec [r=wesj a=akeybl]