widget/src/android/nsWindow.cpp
@@ -1589,9 +1589,8 @@ nsWindow::DispatchMultitouchEvent(nsTouchEvent &event, AndroidGeckoEvent *ae)
     bool preventPanning = (status == nsEventStatus_eConsumeNoDefault);
     if (preventPanning || action == AndroidMotionEvent::ACTION_MOVE) {
         AndroidBridge::Bridge()->SetPreventPanning(preventPanning);
-        return true;
     }
-    return false;
+    return preventPanning;
 }
 
 void
